# netra-discord-bot

./: README.md  docker-compose.yml  prometheus.yml
.github/workflows/: deploy.yml
netra/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  launcher.py  pyproject.toml  requirements.txt
netra/api/: dependencies.py  server.py
netra/api/routes/: guilds.py  stats.py
netra/cogs/automod/: automod.py
netra/cogs/moderation/: moderation.py
netra/cogs/music/: music.py
netra/cogs/owner/: owner.py
netra/cogs/reminders/: reminders.py
netra/cogs/tickets/: tickets.py
netra/cogs/utility/: utility.py
netra/cogs/welcome/: __init__.py  welcome.py
netra/core/: bot.py  config.py  i18n.py  logging.py  metrics.py
netra/database/: session.py
netra/docs/: configuration.md  installation.md
netra/lavalink/: application.yml
netra/locales/en/: main.ftl
netra/migrations/: env.py
netra/migrations/versions/: f03d24bdea9d_initial_migration.py
netra/models/: __init__.py  base.py  moderation.py  reminder.py  systems.py
netra/tests/: test_core.py
